# xdg-desktop-entry-python

./: .gitmodules  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: reference.md
spec/: XDG_DESKTOP_ENTRY.md
src/xdg_desktop_entry/: __init__.py  desktop_file.py  exec.py
tests/: test_spec_compliance.py
