[project]
name = "xdg-desktop-entry"
version = "0.1.0+spec-1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Jassiel Ovando", email = "jassielovando@protonmail.com" }]
dependencies = []

[dependency-groups]
dev = [
  "lizard>=1.21.0",
  "markitdown>=0.1.2",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.3",
  "pymdown-extensions>=10.20.1",
  "ruff>=0.15.1",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["modules/"]
